- add new language Spanish (es_VE) (alfredo)
- add new function: sendsms_get_sender() to get effective SMS Sender ID (anton)
- add new options in preferences: sender and footer (anton)
- add new plugin: message template, replace word templates with phonebook related data (anton)
- add new plugin: send SMS by uploading a list in a CSV file (anton)
- add new plugin: inbox group (anton)
- add webservices type of action (ta=cr) to get user's credit (anton)
- remove address and country from required field on user management (anton)
- remove mobile field from required field on user preferences and management (anton)
- regression: Clickatell's callback URL, should be direct to callback.php (anton)
- replace $sms_datetime in several plugins to $datetime_now (anton)
- replace term 'Receiver' with 'To' (anton)
- replace term 'Sender' with 'From' (anton)
- sendsms() is considered low level, use sendsms_pv() on plugins (anton)
- update FAQ, reformat and fix typos (anton)
- fix SMS footer display on user and all outgoing page (anton)
- fix gateway msgtoolbox, unable to properly save message ID on incoming SMS (anton)
- fix $sms_datetime for display purposes on some plugins using core_display_datetime() (anton)
- fix #3414232 sms_poll log table missing datetime field (anton)

Version 0.9.5.3 - 110910
- MAJOR: fix security hole RFI http://www.exploit-db.com/exploits/17792/ (anton)
- add new option to allow/disallow forwards to inbox, email and mobile for each users (anton)
- add new language zh_CN (fvancaen)
- add new plugin, feature, SMS survey, half-way, the reporting parts are not finished (anton)
- add new method interceptsendsms() to intercept sent SMS before handled by gateway (anton)
- add new field, in_receiver, in db table tblUserInbox and tblSMSIncoming (anton)
- add all intercepts in features plugins, now hook-able from features plugin (anton)
- add method to save receiver number, currently available only in kannel and clickatell (anton)