@@ -8,10 +8,12 @@ Version 0.9.6-git - unknown
 - add new plugin: message template, replace word templates with phonebook related data (anton)
 - add new plugin: send SMS by uploading a list in a CSV file (anton)
 - add new plugin: inbox group (anton)
+- add gpname2gpid() in simplephonebook/fn.php (emmanuel)
 - add webservices type of action (ta=cr) to get user's credit (anton)
 - remove address and country from required field on user management (anton)
 - remove mobile field from required field on user preferences and management (anton)
 - regression: Clickatell's callback URL, should be direct to callback.php (anton)
+- regression: remove addslashes in sendsms() and add stripslashes when fwd to email (anton)
 - replace $sms_datetime in several plugins to $datetime_now (anton)
 - replace term 'Receiver' with 'To' (anton)
 - replace term 'Sender' with 'From' (anton)
